--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.0",
     "grunt-open": "~0.2.0"
   },
   "engines": {
