--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,11 @@
 		"angular": "~1.0.7",
 		"json3": "~3.2.4",
 		"angular-bootstrap": "~0.3.0",
-		"angular-ui-router": "~0.0.1"
+		"angular-ui-router": "~0.0.1",
+        "showdown": "~0.3.1",
+        "html5shiv": "~3.6.2",
+        "jquery": "~2.0.3",
+        "bootstrap" : "~3.0.0"
 	},
     "devDependencies": {
 		"angular-mocks": "~1.0.7",
