--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.4.0",
-    "grunt-open": "~0.2.0"
+    "grunt-open": "~0.2.0",
+    "assemble": "~0.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
