--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "grunt": "~0.4.1",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.4.0",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
     "grunt-open": "~0.2.0",
     "assemble": "~0.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "config" : {
+      "src" : "src",
+      "dist" : "dist"
   }
 }
