--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "grunt-contrib-watch": "~0.4.0",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-ngmin": "0.0.3",
     "grunt-open": "~0.2.0",
+    "matchdep": "~0.1.2",
     "assemble": "~0.4.1"
   },
   "engines": {
