--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-ngmin": "0.0.3",
+    "grunt-html2js": "~0.1.6",
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.2",
     "assemble": "~0.4.1"
