--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
     "grunt-ngmin": "0.0.3",
     "grunt-html2js": "~0.1.6",
     "grunt-open": "~0.2.0",
+    "grunt-karma": "~0.4.5",
     "matchdep": "~0.1.2",
     "assemble": "~0.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
-  },
-  "config" : {
-      "src" : "src",
-      "dist" : "dist"
   }
 }
