--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,20 @@
 {
-    "name": "taskurotta.org",
-    "version": "0.0.1",
-    "dependencies": {
-		"angular": "~1.0.7",
-		"json3": "~3.2.4",
-		"angular-bootstrap": "~0.3.0",
-		"angular-ui-router": "~0.0.1",
-        "showdown": "~0.3.1",
-        "html5shiv": "~3.6.2",
-        "jquery": "~2.0.3",
-        "bootstrap" : "~3.0.0"
-	},
-    "devDependencies": {
-		"angular-mocks": "~1.0.7",
-        "angular-scenario": "~1.0.7"
-	}
-
+  "name": "taskurotta.org",
+  "version": "0.0.1",
+  "dependencies": {
+    "angular": "~1.0.7",
+    "bower-angular-ui-router": "~0.0.1",
+    "json3": "~3.2.5",
+    "showdown": "~0.3.1",
+    "jquery": "~2.0.3",
+    "bootstrap": "~3.0.0",
+    "js-yaml": "~2.1.0",
+    "html5shiv": "~3.6.2"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.0.7",
+    "angular-scenario": "~1.0.7",
+    "angular-bootstrap": "~0.3.0",
+    "angular-ui-router": "~0.0.1"
+  }
 }
-
