--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "grunt-open": "~0.2.0",
     "grunt-karma": "~0.4.5",
     "matchdep": "~0.1.2",
-    "assemble": "~0.4.1"
+    "assemble": "~0.4.1",
+    "grunt-bower-install": "~0.4.0",
+    "js-yaml": "~2.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
