--- a/src/mod/footer/config.yml
+++ b/src/mod/footer/config.yml
@@ -1,9 +1,12 @@
-footerMod:
-    copyright: Taskurotta Team 2013
-    links:
+footerModConfig:
+    copyright: &footerMod.copyright Taskurotta Team 2013
+    links: &footerMod.links
       - id: footnav_blog
         href: 'https://github.com/taskurotta/taskurotta.org'
         name: Blog
       - id: footnav_issue
         href: 'https://github.com/taskurotta/taskurotta.org/issues?state=open'
         name: Issues
+footerMod:
+    copyright: *footerMod.copyright
+    links: *footerMod.links
