--- a/apps/src/app/road_map/config.yml
+++ b/apps/src/app/road_map/config.yml
@@ -1,12 +1,7 @@
-road_mapApp:
-    # Page params
+app:
+  road_map:
     title: План
-    mods:
-      - name: app
-        version: 0.1.0
-      - name: markdown
-        version: 0.1.0
-      - name:  navigation
-        version: 0.1.0
-      - name:  footer
-        version: 0.1.0
+
+mods:
+  navigation: { version: 0.1.0, src: '..\mods\src' }
+  footer: { version: 0.1.0, src: '..\mods\src' }
