--- a/apps/src/app/index/config.yml
+++ b/apps/src/app/index/config.yml
@@ -3,6 +3,7 @@ app:
     title: Введение
 
 mods:
+  core: { version: 0.2.0, src: '..\mods\src' }
   navigation: { version: 0.1.0, src: '..\mods\src' }
   footer: { version: 0.1.0, src: '..\mods\src' }
 
