--- a/mods/src/mod/footer/config.yml
+++ b/mods/src/mod/footer/config.yml
@@ -1,8 +1,7 @@
-mod:
-  footer:
-    version: 0.1.0
-    copyright: Taskurotta Team 2013
-    links:
+name: footer
+version: 0.1.0
+copyright: Taskurotta Team 2013
+links:
       - id: footnav_blog
         href: 'https://github.com/taskurotta/taskurotta.org'
         name: Blog
