Портал вынесен в корень

--- a/src/settings.yml
+++ b/src/settings.yml
@@ -1,14 +1,14 @@
 #portal theme
-template: { src: '../template/src' }
+template: { src: 'template/src' }
 app:
-  index: { src: '../apps/src'}
-  get_started: { src: '../apps/src'}
-  road_map: { src: '../apps/src'}
+  index: { src: 'apps/src'}
+  get_started: { src: 'apps/src'}
+  road_map: { src: 'apps/src'}
 mod:
-  core: { src: '../mod_core/src' }
-  markdown: { src: '../mods/src' }
-  navigation: { src: '../mods/src' }
-  footer: { src : '../mods/src' }
+  core: { src: 'mods/src' }
+  markdown: { src: 'mods/src' }
+  navigation: { src: 'mods/src' }
+  footer: { src : 'mods/src' }
 lib:
   html5shiv: { file: dist/html5shiv.js, src: 'bower_components' }
   jquery: { file: jquery.js, src: 'bower_components' }
