--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "js-yaml": ">=2.1.0",
     "node.extend": ">=1.0.7",
     "dirsum": "~0.1.1",
-    "shorthash": ">=0.0.2",
+    "shorthash": ">=0.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
