Добавлена оснастка для прилоджения "Документация"

--- a/mods/src/mod/navigation/config.yml
+++ b/mods/src/mod/navigation/config.yml
@@ -7,16 +7,9 @@ menu:
          - { id: rootnav_index, href: index.html, name: Taskurotta }
          - { id: rootnav_get_started, href: get_started.html, name: Введение }
          - { id: rootnav_road_map,  href: road_map.html, name: План }
-         - id: rootnav_doc
+         - id: rootnav_documetation
            href: '#'
-           name: Документация (TODO)
+           name: Документация
            items:
-              - { id: 1, href: '#', name: Основная концепция }
-              - { id: 2, href: '#', name: Сценарии использования }
-              - { id: 3, delim: true, href: '#', name: Пакеты }
-              - { id: 4, href: '#', name: Аннотации }
-              - { id: 5, href: '#', name: Исключения }
-              - { id: 6, href: '#', name: Мониторинг }
-              - { id: 7, delim: true, href: '#', name: Unit тесты }
-              - { id: 8, href: '#', name: Регрессионное тестирование }
-              - { id: 9, href: '#', name: A/B тестирование }
+              - { id: 1, href: 'documentation.html', name: Введение }
+              - { id: 2, href: '#', name: Глава 1 }
