--- a/src/config.yml
+++ b/src/config.yml
@@ -7,8 +7,8 @@ mod:
       dropdown: true
       items:
          - { id: rootnav_index, href: index.html, name: Taskurotta }
+         - { id: rootnav_road_map,  href: road_map.html, name: Info }
          - { id: rootnav_get_started, href: get_started.html, name: Введение }
-         - { id: rootnav_road_map,  href: road_map.html, name: План }
          - id: rootnav_documetation
            href: 'documentation.html'
            name: Документация
