Added english description

--- a/apps/src/app/documentation/config.yml
+++ b/apps/src/app/documentation/config.yml
@@ -1,3 +1,14 @@
 app:
   name: documentation
   title: Документация
+
+mod:
+  footer:
+    copyright: Taskurotta Team 2013
+    links:
+      - id: footnav_blog
+        href: 'https://github.com/taskurotta/taskurotta'
+        name: Blog
+      - id: footnav_issue
+        href: 'https://github.com/taskurotta/taskurotta/issues?page=1&state=open'
+        name: Issues
