--- a/apps/src/app/get_started/config.yml
+++ b/apps/src/app/get_started/config.yml
@@ -7,8 +7,8 @@ mod:
     copyright: Taskurotta Team 2013
     links:
       - id: footnav_blog
-        href: 'https://github.com/taskurotta/taskurotta.org'
+        href: 'https://github.com/taskurotta/taskurotta'
         name: Blog
       - id: footnav_issue
-        href: 'https://github.com/taskurotta/taskurotta.org/issues?state=open'
+        href: 'https://github.com/taskurotta/taskurotta/issues?page=1&state=open'
         name: Issues
