--- a/apps/src/app/index/config.yml
+++ b/apps/src/app/index/config.yml
@@ -8,7 +8,7 @@ mod:
     links:
       - id: footnav_blog
         href: 'https://github.com/taskurotta/taskurotta'
-        name: Blog
+        name: Source
       - id: footnav_issue
         href: 'https://github.com/taskurotta/taskurotta/issues?page=1&state=open'
         name: Issues
